--- a/.github/workflows/dependency-tree-update.yml
+++ b/.github/workflows/dependency-tree-update.yml
@@ -3,10 +3,13 @@ on:
   workflow_call:
     secrets:
       github-token:
-        description: "Token used to checkout code and create PR"
+        description: Token used to checkout code and create PR
         required: true
       gpg-key:
         description: The client key to use for commit author and signing
+        required: true
+      npm-token:
+        description: Token used to authenticate to the private GitHub npm registry
         required: true
     inputs:
       path: 
@@ -31,9 +34,12 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version-file: '.nvmrc'
+          registry-url: 'https://npm.pkg.github.com'
       - name: Set-up Node 
         if: ${{ steps.nvmrc.outcome != 'success' }}
         uses: actions/setup-node@v2
+        with:
+          registry-url: 'https://npm.pkg.github.com'
       - name: Update dependency tree.
         working-directory:  ${{ inputs.path }}
         run: |
@@ -45,6 +51,8 @@ jobs:
             rm yarn.lock;
             yarn;
           fi;
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.npm-token }}
       - name: Configure git for tradeshiftci
         id: configure
         uses: tradeshift/actions-git/configure-from-gpg-key@v1
