--- a/.github/workflows/dependency-tree-update.yml
+++ b/.github/workflows/dependency-tree-update.yml
@@ -48,7 +48,8 @@ jobs:
         id: update
         working-directory:  ${{ inputs.path }}
         run: |
-          rm -rf node_modules
+          rm -rf node_modules;
+          sed -i '/package-lock.json/d' .gitignore;
           if [ -f package-lock.json ]; then
             rm package-lock.json;
             npm install;
