--- a/.github/workflows/comment-npm-publish.yml
+++ b/.github/workflows/comment-npm-publish.yml
@@ -42,7 +42,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version-file: ".nvmrc"
           registry-url: "https://npm.pkg.github.com/"
           cache: "npm"
 
