--- a/.github/workflows/comment-npm-publish.yml
+++ b/.github/workflows/comment-npm-publish.yml
@@ -41,9 +41,24 @@ jobs:
           git checkout pr-find-commit
 
       - uses: actions/setup-node@v3
+      - name: Check for .nvmrc file root folder
+        continue-on-error: true
+        id: nvmrcRoot
+        run: |
+          [ -f .nvmrc ]
+      - name: Set up Node with .nvmrc in root
+        if: ${{ steps.nvmrcRoot.outcome == 'success' }}
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: ".nvmrc"
+          registry-url: "https://npm.pkg.github.com"
+          cache: "npm"
+      - name: Set up Node in default version
+        if: ${{ steps.nvmrcRoot.outcome != 'success' }}
+        uses: actions/setup-node@v3
         with:
           node-version: 14
-          registry-url: "https://npm.pkg.github.com/"
+          registry-url: "https://npm.pkg.github.com"
           cache: "npm"
 
       - name: 📥 Download deps
