--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>Tradeshift/renovate-config:config-github-workflow(comment-npm-publish.yml)"
+    "local>Tradeshift/renovate-config:automerge-all"
   ]
 }
