chore: enable renovate with dev dependencies auto-merge SRE-3759

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>Tradeshift/renovate-config:config-github-workflow(comment-npm-publish.yml)"
+    "local>Tradeshift/renovate-config:config-github-workflow(comment-npm-publish.yml)",
+    "local>Tradeshift/renovate-config:automerge-dev-deps"
   ]
 }
